resynced with gnu classpath